# log-monitor

./: README.md  changelog.md  log-monitor.cabal
src-exe/log-monitor/: Arguments.hs  Main.hs
