name: log-monitor
version: 1.0.0
synopsis: Monitoring hslogger logs
license: BSD3
license-file: LICENSE
author: Alex Bates
maintainer: ard.bates@gmail.com
build-type: Simple
homepage: http://github.com/prophet-on-that/log-monitor
bug-reports: http://github.com/prophet-on-that/log-monitor/issues
cabal-version: >=1.10
category: Interfaces, Parsing

executable log-monitor
  hs-source-dirs: src-exe/log-monitor
  main-is:
    Main.hs
  other-modules:
      Arguments
  default-language: Haskell2010
  build-depends:
      base == 4.8.*
    , hslogger-reader == 1.0.*
    , hslogger == 1.2.*
    , text == 1.2.*
    , time >= 1.4 && < 1.6
    , attoparsec == 0.12.*
    , containers == 0.5.*
    , hostname == 1.0.*
    , mime-mail == 0.4.*
    , yaml == 0.8.*
    , directory == 1.2.*
    , optparse-applicative == 0.11.*
  ghc-options: -W