name: log-monitor
version: 1.1
synopsis: Monitoring hslogger logs
license: BSD3
license-file: LICENSE
author: Alex Bates
maintainer: ard.bates@gmail.com
build-type: Simple
homepage: http://github.com/prophet-on-that/log-monitor
bug-reports: http://github.com/prophet-on-that/log-monitor/issues
cabal-version: >=1.10
category: Interfaces, Parsing
description:
  An executable to monitor <http://hackage.haskell.org/package/hslogger hslogger> produced logs. The program reads a <http://www.yaml.org YAML> configuration file on startup (/log-monitor.yaml/ by default), which must specify lists of /admins/ and /recipients/ and a list of /sources/. Sources represent log files to monitor, and must specify the /sourcePath/, a /sourceName/, the hslogger /formatString/ and the minimum priority (/minPriority/) to report. The format of the logs require $msg, $loggername, $utcTime and $prio fields. Here's an example of a /log-monitor.yaml/ file.
  . 
  > recipients: 
  > - recipient@provider.com
  > sources: 
  > - sourceName: web-server
  >   sourcePath: /home/user/web-server/log
  >   formatString: "[$utcTime $loggername $prio] $msg"
  >   minPriority: WARNING
  > - sourceName: email-server
  >   sourcePath: /home/user/email-server/log
  >   formatString: "[$utcTime $loggername $prio] $msg"
  >   minPriority: INFO
extra-source-files: changelog.md

executable log-monitor
  hs-source-dirs: src-exe/log-monitor
  main-is:
    Main.hs
  other-modules:
      Arguments
  default-language: Haskell2010
  build-depends:
      base == 4.8.*
    , hslogger-reader == 1.0.*
    , hslogger == 1.2.*
    , text == 1.2.*
    , time >= 1.4 && < 1.6
    , attoparsec == 0.12.*
    , containers == 0.5.*
    , hostname == 1.0.*
    , mime-mail == 0.4.*
    , yaml == 0.8.*
    , directory == 1.2.*
    , optparse-applicative == 0.11.*
    , async == 2.0.*
  ghc-options: -W